test(infra): replace hardcoded import server port with dynamic base URL property
Signed-off-by: Marcus Fihlon <marcus@fihlon.swiss>